# judge-agent

./: .gitignore  README.md  pyproject.toml
examples/text/: sample.txt  sample_aiish.txt
src/judge_agent/: __init__.py  cli.py  pipeline.py  schemas.py  web.py
src/judge_agent/feature_extractors/: audio_features.py  text_features.py  video_features.py
src/judge_agent/scorers/: __init__.py  audience_scorer.py  origin_scorer.py  virality_scorer.py
src/judge_agent/templates/: index.html
src/judge_agent/utils/: __init__.py  ffmpeg.py
tests/: test_text.py  test_video_smoke.py  test_web_smoke.py
